--- a/Cassini/Base.lproj/Main.storyboard
+++ b/Cassini/Base.lproj/Main.storyboard
@@ -1,11 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="e0A-hM-lVG">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Image View Controller-->
+        <scene sceneID="P2c-2o-9ad">
+            <objects>
+                <viewController id="e0A-hM-lVG" customClass="ImageViewController" customModule="Cassini" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="LHP-IH-J9c"/>
+                        <viewControllerLayoutGuide type="bottom" id="nHm-Lx-Nen"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CJu-uM-fjB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hp9-NM-oPS">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="hp9-NM-oPS" secondAttribute="trailing" id="45o-Ke-pKb"/>
+                            <constraint firstItem="hp9-NM-oPS" firstAttribute="bottom" secondItem="nHm-Lx-Nen" secondAttribute="top" id="4sR-oN-yMb"/>
+                            <constraint firstItem="hp9-NM-oPS" firstAttribute="top" secondItem="CJu-uM-fjB" secondAttribute="top" id="fOI-XO-gox"/>
+                            <constraint firstItem="hp9-NM-oPS" firstAttribute="leading" secondItem="CJu-uM-fjB" secondAttribute="leading" id="ub0-Jy-JLT"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="scrollView" destination="hp9-NM-oPS" id="Wwh-Sn-IcV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3EH-1Z-1Kj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="64.799999999999997" y="252.32383808095955"/>
+        </scene>
+    </scenes>
 </document>
