--- a/Cassini/Base.lproj/Main.storyboard
+++ b/Cassini/Base.lproj/Main.storyboard
@@ -24,6 +24,11 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hp9-NM-oPS">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </scrollView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="eYL-8p-HC5">
+                                <rect key="frame" x="169" y="315" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="color" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -36,6 +41,7 @@
                     <navigationItem key="navigationItem" id="aXN-mf-LNh"/>
                     <connections>
                         <outlet property="scrollView" destination="hp9-NM-oPS" id="Wwh-Sn-IcV"/>
+                        <outlet property="spinner" destination="eYL-8p-HC5" id="eIj-s5-mjj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3EH-1Z-1Kj" userLabel="First Responder" sceneMemberID="firstResponder"/>
